เพิ่ม TextField ให้ระบบชำระเบี้ยประกัน - fix #149
