# backend/docs/swagger.json
@@ -246,12 +246,12 @@
         },
         "/banks": {
             "get": {
-                "description": "list Bank entities",
+                "description": "list bank entities",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List Bank entities",
-                "operationId": "list-Bank",
+                "summary": "List bank entities",
+                "operationId": "list-bank",
                 "parameters": [
                     {
                         "type": "integer",
@@ -291,19 +291,19 @@
                 }
             },
             "post": {
-                "description": "Create Bank",
+                "description": "Create bank",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create Bank",
-                "operationId": "create-Bank",
+                "summary": "Create bank",
+                "operationId": "create-bank",
                 "parameters": [
                     {
                         "description": "Bank entity",
-                        "name": "Bank",
+                        "name": "bank",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -335,12 +335,12 @@
         },
         "/banks/{id}": {
             "get": {
-                "description": "get Bank by ID",
+                "description": "get bank by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a Bank entity by ID",
-                "operationId": "get-Bank",
+                "summary": "Get a bank entity by ID",
+                "operationId": "get-bank",
                 "parameters": [
                     {
                         "type": "integer",
@@ -378,15 +378,15 @@
                 }
             },
             "put": {
-                "description": "update Bank by ID",
+                "description": "update bank by ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a Bank entity by ID",
-                "operationId": "update-Bank",
+                "summary": "Update a bank entity by ID",
+                "operationId": "update-bank",
                 "parameters": [
                     {
                         "type": "integer",
@@ -397,7 +397,7 @@
                     },
                     {
                         "description": "Bank entity",
-                        "name": "Bank",
+                        "name": "bank",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -427,12 +427,12 @@
                 }
             },
             "delete": {
-                "description": "get Bank by ID",
+                "description": "get bank by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Delete a Bank entity by ID",
-                "operationId": "delete-Bank",
+                "summary": "Delete a bank entity by ID",
+                "operationId": "delete-bank",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1598,6 +1598,49 @@
             }
         },
         "/insurances/{id}": {
+            "get": {
+                "description": "get insurance by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a insurance entity by ID",
+                "operationId": "get-insurance",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Insurance ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Insurance"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "get insurance by ID",
                 "produces": [
@@ -1868,14 +1911,14 @@
                 }
             }
         },
-        "/moneyTransfers": {
+        "/moneytransfers": {
             "get": {
-                "description": "list MoneyTransfer entities",
+                "description": "list moneytransfer entities",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List MoneyTransfer entities",
-                "operationId": "list-MoneyTransfer",
+                "summary": "List moneytransfer entities",
+                "operationId": "list-moneytransfer",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1915,19 +1958,19 @@
                 }
             },
             "post": {
-                "description": "Create MoneyTransfer",
+                "description": "Create moneytransfer",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create MoneyTransfer",
-                "operationId": "create-MoneyTransfer",
+                "summary": "Create moneytransfer",
+                "operationId": "create-moneytransfer",
                 "parameters": [
                     {
                         "description": "MoneyTransfer entity",
-                        "name": "MoneyTransfer",
+                        "name": "moneyTransfer",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1957,14 +2000,14 @@
                 }
             }
         },
-        "/moneyTransfers/{id}": {
+        "/moneytransfers/{id}": {
             "get": {
-                "description": "get MoneyTransfer by ID",
+                "description": "get moneytransfer by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a MoneyTransfer entity by ID",
-                "operationId": "get-MoneyTransfer",
+                "summary": "Get a moneytransfer entity by ID",
+                "operationId": "get-moneytransfer",
                 "parameters": [
                     {
                         "type": "integer",
@@ -2002,15 +2045,15 @@
                 }
             },
             "put": {
-                "description": "update MoneyTransfer by ID",
+                "description": "update moneytransfer by ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a MoneyTransfer entity by ID",
-                "operationId": "update-MoneyTransfer",
+                "summary": "Update a moneytransfer entity by ID",
+                "operationId": "update-moneytransfer",
                 "parameters": [
                     {
                         "type": "integer",
@@ -2021,7 +2064,7 @@
                     },
                     {
                         "description": "MoneyTransfer entity",
-                        "name": "MoneyTransfer",
+                        "name": "moneyTransfer",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -2051,12 +2094,12 @@
                 }
             },
             "delete": {
-                "description": "get MoneyTransfer by ID",
+                "description": "get moneytransfer by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Delete a MoneyTransfer entity by ID",
-                "operationId": "delete-MoneyTransfer",
+                "summary": "Delete a moneytransfer entity by ID",
+                "operationId": "delete-moneytransfer",
                 "parameters": [
                     {
                         "type": "integer",
@@ -2456,12 +2499,12 @@
         },
         "/payments": {
             "get": {
-                "description": "list Payment entities",
+                "description": "list payment entities",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List Payment entities",
-                "operationId": "list-Payment",
+                "summary": "List payment entities",
+                "operationId": "list-payment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -2501,19 +2544,19 @@
                 }
             },
             "post": {
-                "description": "Create Payment",
+                "description": "Create payment",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create Payment",
-                "operationId": "create-Payment",
+                "summary": "Create payment",
+                "operationId": "create-payment",
                 "parameters": [
                     {
                         "description": "Payment entity",
-                        "name": "Payment",
+                        "name": "payment",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -2544,13 +2587,56 @@
             }
         },
         "/payments/{id}": {
-            "delete": {
-                "description": "get Payment by ID",
+            "get": {
+                "description": "get payment by ID",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Delete a Payment entity by ID",
-                "operationId": "delete-Payment",
+                "summary": "Get a payment entity by ID",
+                "operationId": "get-payment",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Payment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Payment"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "get payment by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete a payment entity by ID",
+                "operationId": "delete-payment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -3044,6 +3130,9 @@
                     "type": "integer"
                 },
                 "moneytransferID": {
+                    "type": "integer"
+                },
+                "productID": {
                     "type": "integer"
                 },
                 "transferTime": {
@@ -3664,6 +3753,11 @@
                     "description": "MoneyTransfer holds the value of the MoneyTransfer edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.MoneyTransfer"
+                },
+                "product": {
+                    "description": "Product holds the value of the Product edge.",
+                    "type": "object",
+                    "$ref": "#/definitions/ent.Product"
                 }
             }
         },
@@ -3734,6 +3828,13 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Payback"
+                    }
+                },
+                "productPayment": {
+                    "description": "ProductPayment holds the value of the product_payment edge.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ent.Payment"
                     }
                 },
                 "productRecordinsurance": {
